; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_falcon.c_falcon_get_wol.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_falcon.c_falcon_get_wol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_nic = type { i32 }
%struct.ethtool_wolinfo = type { i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.efx_nic*, %struct.ethtool_wolinfo*)* @falcon_get_wol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @falcon_get_wol(%struct.efx_nic* %0, %struct.ethtool_wolinfo* %1) #0 {
  %3 = alloca %struct.efx_nic*, align 8
  %4 = alloca %struct.ethtool_wolinfo*, align 8
  store %struct.efx_nic* %0, %struct.efx_nic** %3, align 8
  store %struct.ethtool_wolinfo* %1, %struct.ethtool_wolinfo** %4, align 8
  %5 = load %struct.ethtool_wolinfo*, %struct.ethtool_wolinfo** %4, align 8
  %6 = getelementptr inbounds %struct.ethtool_wolinfo, %struct.ethtool_wolinfo* %5, i32 0, i32 2
  store i64 0, i64* %6, align 8
  %7 = load %struct.ethtool_wolinfo*, %struct.ethtool_wolinfo** %4, align 8
  %8 = getelementptr inbounds %struct.ethtool_wolinfo, %struct.ethtool_wolinfo* %7, i32 0, i32 1
  store i64 0, i64* %8, align 8
  %9 = load %struct.ethtool_wolinfo*, %struct.ethtool_wolinfo** %4, align 8
  %10 = getelementptr inbounds %struct.ethtool_wolinfo, %struct.ethtool_wolinfo* %9, i32 0, i32 0
  %11 = call i32 @memset(i32* %10, i32 0, i32 4)
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
